se agrego footer a index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <section>
         <h2>Página del proyecto pepsi</h2>
     </section>
+    <footer>
+        aha
+    </footer>
 </body>
 </html>
