--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <header>
+    </header>
     <section>
         <h2>Página del proyecto pepsi</h2>
     </section>
