--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <h1>elaborado desde un fork</h1>
     </header>
     <section>
         <h2>Página del proyecto pepsi</h2>
